Added Mssql 2019-ubuntu 18-04 version

--- a/.gitignore
+++ b/.gitignore
@@ -3,5 +3,7 @@
 /cache/redis/.env
 /database/sql/postgres/.env
 /database/sql/mysql/.env
+/database/sql/mssql/volumes
+/database/sql/mssql/.env
 /database/nosql/mongodb/.env
 /mq/rabbitmq/.env
